[gd_scene load_steps=10 format=3 uid="uid://cnhpap8tim3hh"]

[ext_resource type="Theme" uid="uid://c2qkyos0u3k4c" path="res://addons/@fumohouse/debug/overlays/debug_theme.tres" id="1_5h3vn"]
[ext_resource type="Shader" uid="uid://cfejetqo4tpot" path="res://addons/@fumohouse/common/resources/materials/ui_blur.gdshader" id="1_hkifj"]
[ext_resource type="Script" uid="uid://ccx2n6cri1sdl" path="res://addons/@fumohouse/debug/overlays/debug_window.gd" id="2_3m2j5"]
[ext_resource type="FontFile" uid="uid://clifouy6vdsx0" path="res://addons/@assets/clarity-city/ClarityCity-Regular.woff2" id="3_jh73a"]
[ext_resource type="FontFile" uid="uid://c4qltp4duykro" path="res://addons/@assets/clarity-city/ClarityCity-RegularItalic.woff2" id="4_0mp2w"]
[ext_resource type="FontFile" uid="uid://cy7dvil6s4ebc" path="res://addons/@assets/clarity-city/ClarityCity-BoldItalic.woff2" id="5_3m2j5"]
[ext_resource type="FontFile" uid="uid://b84oqonqechq2" path="res://addons/@assets/clarity-city/ClarityCity-Bold.woff2" id="6_jyni0"]
[ext_resource type="FontFile" uid="uid://dixpl8yc7hcke" path="res://addons/@assets/bootstrap-icons/bootstrap-icons.woff2" id="7_0mp2w"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5h3vn"]
shader = ExtResource("1_hkifj")
shader_parameter/blur = 1.0
shader_parameter/dim = 0.5

[node name="DebugWindow" type="MarginContainer"]
offset_right = 328.0
offset_bottom = 30.0
theme = ExtResource("1_5h3vn")
script = ExtResource("2_3m2j5")

[node name="Background" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_5h3vn")
layout_mode = 2

[node name="Foreground" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="Foreground"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="TopBar" type="HBoxContainer" parent="Foreground/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(320, 0)
layout_mode = 2

[node name="Icon" type="TextureRect" parent="Foreground/VBoxContainer/TopBar"]
visible = false
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
expand_mode = 1
stretch_mode = 5

[node name="Title" type="RichTextLabel" parent="Foreground/VBoxContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
mouse_filter = 2
theme_override_constants/line_separation = -1
theme_override_fonts/normal_font = ExtResource("3_jh73a")
theme_override_fonts/italics_font = ExtResource("4_0mp2w")
theme_override_fonts/bold_italics_font = ExtResource("5_3m2j5")
theme_override_fonts/bold_font = ExtResource("6_jyni0")
bbcode_enabled = true
text = "Title"
fit_content = true
scroll_active = false
autowrap_mode = 0
shortcut_keys_enabled = false
vertical_alignment = 1

[node name="Spacer" type="Control" parent="Foreground/VBoxContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="CloseButton" type="Button" parent="Foreground/VBoxContainer/TopBar"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
theme_type_variation = &"FlatButton"
theme_override_fonts/font = ExtResource("7_0mp2w")
theme_override_font_sizes/font_size = 13
text = "ï˜ª"

[node name="Spacer" type="ColorRect" parent="Foreground/VBoxContainer"]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2

[node name="Contents" type="MarginContainer" parent="Foreground/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/margin_top = 4

[node name="Overlay" type="Control" parent="."]
layout_mode = 2
mouse_filter = 2

[node name="ResizeHandle" type="Control" parent="Overlay"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -12.0
offset_top = -12.0
grow_horizontal = 0
grow_vertical = 0
mouse_default_cursor_shape = 12

[node name="HandleIcon" type="ColorRect" parent="Overlay/ResizeHandle"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -4.0
grow_horizontal = 0
grow_vertical = 0
mouse_filter = 2
